[project]
name = "tungnaa"
version = "0.2.0"
description = "tungnaa is a text-to-voice model family and musical instrument"
authors = [
    { name = "Victor Shepardson", email = "victor.shepardson@gmail.com" },
    { name = "Jonathan Chaim Reus", email = "studio@jonathanreus.com" },
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy<2.0.0",
    "torch~=2.9.0",
    "normflows>=1.7.3,<2",
    "transformers>=4.27.1,<5",
    "fire>=0.4.0,<0.8",
    "scikit-learn>=1.6.1,<2",
    "soundfile>=0.13.1,<0.14",
    "huggingface-hub>=0.31.4,<0.32",
    "markdown>=3.8,<4",
    "markdown-full-yaml-metadata>=2.2.1,<3",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.4.3,<7,!=6.9.1",
    "pyqtgraph>=0.13.2,<0.14",
    "python-osc>=1.8.1,<2",
    "sounddevice>=0.4.6,<0.5",
]
train = [
    "torchcodec~=0.9.0",
    "torchaudio~=2.9.0",
    "tqdm>=4.64,<5",
    "matplotlib>=3.7.1,<4",
    "ipykernel>=6.29.4,<7",
    "tensorboard>=2.12.0,<3",
    "pandas>=2.2.2,<3",
    "odfpy>=1.4.1,<2",
]

[project.scripts]
tungnaa = "tungnaa.__main__:_main"

[dependency-groups]
dev = [
    "mkdocs>=1.5.3,<2",
    "mkdocstrings[python]>=0.29.1,<0.30",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "mkdocs-include-markdown-plugin>=6.0.4,<7",
    "mkdocs-material>=9.4.8,<10",
    "mkdocs-material-extensions>=1.3,<2",
    "mkdocs-autorefs>=1.4.0,<2",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
